# xfold

./: README.md  example.sh  inference.py  pyproject.toml  run_alphafold.py
xfold/: alphafold3.py  feat_batch.py  features.py  geometry.py  params.py
xfold/constants/: atom_types.py  mmcif_names.py  side_chains.py
xfold/fastnn/: __init__.py  attention.py  config.py  fused_kernel.py  gated_linear_unit.py  layer_norm.py
xfold/nn/: atom_cross_attention.py  atom_layout.py  attention.py  diffusion_head.py  diffusion_transformer.py  featurization.py  head.py  pairformer.py  primitives.py  template.py  triangle_multiplication.py  utils.py
