[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xfold"
authors = [{ name = "Shenggan Cheng", email = "shenggan.c@u.nus.edu" }]
description = "fold for everyone."
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
dependencies = [
    "torch", 
    "zstandard", 
    "rdkit==2024.3.5",
]

[tool.setuptools]
packages = ["xfold"]

[tool.setuptools.dynamic]
version = { attr = "xfold.version.VERSION" }